--- a/javascriptRepository/package.json
+++ b/javascriptRepository/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@dependency/",
-    "version": "0.0.0",
-    "main": "./source/entrypoint/programmaticApi/transpilation.entrypoint.js",
+    "version": "1.0.0",
+    "main": "./entrypoint/programmaticAPI",
     "files": [
         "./distribution"
     ],
@@ -13,9 +13,9 @@
     "dependencies": {},
     "devDependencies": {
         "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript",
-        "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation",
+        "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation#semver:^1.x.x",
         "@dependency/scriptManager": "git+https://github.com/AppScriptIO/scriptManager.git",
-        "@dependency/javascriptStaticAnalysis": "https://github.com/AppScriptIO/javascriptStaticAnalysis",
+        "@dependency/javascriptStaticAnalysis": "https://github.com/AppScriptIO/javascriptStaticAnalysis#semver:^1.x.x",
         "typescript": "^3.3.3333"
     }
 }
