--- a/javascriptRepository/package.json
+++ b/javascriptRepository/package.json
@@ -2,6 +2,9 @@
     "name": "@dependency/",
     "version": "1.0.0",
     "main": "./entrypoint/programmaticAPI",
+    "bin": {
+        "cli": "./entrypoint/cli"  
+    },
     "files": [
         "./distribution"
     ],
@@ -14,8 +17,8 @@
     "devDependencies": {
         "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript",
         "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation#semver:^1.x.x",
-        "@dependency/scriptManager": "git+https://github.com/AppScriptIO/scriptManager.git",
         "@dependency/javascriptStaticAnalysis": "https://github.com/AppScriptIO/javascriptStaticAnalysis#semver:^1.x.x",
+        "@dependency/scriptManager": "git+https://github.com/AppScriptIO/scriptManager.git",
         "typescript": "^3.3.3333"
     }
 }
