--- a/javascriptRepository/package.json
+++ b/javascriptRepository/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dependency/",
+    "name": "@dependency/boilerplate",
     "version": "1.0.0",
     "main": "./entrypoint/programmaticAPI",
     "bin": {
@@ -8,6 +8,11 @@
     "files": [
         "./distribution"
     ],
+    "workspaces": {
+        "packages": [],
+        "nohoist": []
+    },
+    "private": true,
     "scripts": {
         "setup": "yarn install --production=false",
         "test": "yarn run scriptManager test \"({ testPath: './test' })\"",
@@ -15,10 +20,10 @@
     },
     "dependencies": {},
     "devDependencies": {
-        "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript",
+        "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript#semver:^1.x.x",
         "@dependency/javascriptTranspilation": "https://github.com/AppScriptIO/javascriptTranspilation#semver:^1.x.x",
         "@dependency/javascriptStaticAnalysis": "https://github.com/AppScriptIO/javascriptStaticAnalysis#semver:^1.x.x",
-        "@dependency/scriptManager": "git+https://github.com/AppScriptIO/scriptManager.git",
+        "@dependency/scriptManager": "https://github.com/AppScriptIO/scriptManager#semver:^1.x.x",
         "typescript": "^3.3.3333"
     }
 }
