--- a/javascriptRepository/package.json
+++ b/javascriptRepository/package.json
@@ -8,16 +8,17 @@
     "files": [
         "./distribution"
     ],
-    "workspaces": {
-        "packages": [],
-        "nohoist": []
-    },
+    "workspaces": [
+        "source",
+        "./script/*"
+    ],
     "private": true,
     "scripts": {
         "setup": "yarn install --production=false",
         "test": "yarn run scriptManager test \"({ testPath: './test' })\"",
         "generateTypes": "tsc --project ./configuration/typescript.config.json"
     },
+    "flat": false,
     "dependencies": {},
     "devDependencies": {
         "@dependency/deploymentScript": "https://github.com/AppScriptIO/deploymentScript#semver:^1.x.x",
