--- a/javascriptModuleRepository/package.json
+++ b/javascriptModuleRepository/package.json
@@ -24,7 +24,9 @@
         "loadGraphData": "yarn run scriptManager shouldCompileScript=true graphDatabase/exportGraphData \".loadGraphDataFromFile({ shouldClearDatabase: true, graphDataFilePath: './resource/taskSequence.graphData.json' })\"",    
 		"build": "yarn run scriptManager shouldCompileScript=true JSProject/buildSourceCode \".moduleProject({}, {compile:[/**'./test'*/})\"",
 		"bumpVersion": "yarn run scriptManager shouldCompileScript=true JSProject/packageVersion \".bumpVersion({})\"",
-		"buildAndRelease": "yarn run scriptManager shouldCompileScript=true JSProject/buildAndRelease \".moduleProject({})\""
+        "buildAndRelease": "yarn run scriptManager shouldCompileScript=true JSProject/buildAndRelease \".moduleProject({})\"",
+        "release": "yarn run scriptManager buildSourceCode \".createGithubBranchedRelease({ tagName: '1.0.13' })\"",
+        "updateGithubVersions": "yarn run scriptManager versionGithub \".checkVersion({ shouldUpdatePackage: true })\""
     },
     "flat": false,
     "dependencies": {},
