--- a/javascriptModuleRepository/package.json
+++ b/javascriptModuleRepository/package.json
@@ -23,8 +23,9 @@
 		"sleep": "yarn run scriptManager sleep '.setInterval()' ",
         "exportGraphData": "yarn run scriptManager shouldCompileScript=true graphDatabase/exportGraphData \".exportGraphData({targetPath: './resource',fileName: 'taskSequence.graphData.json'})\"",
         "loadGraphData": "yarn run scriptManager shouldCompileScript=true graphDatabase/exportGraphData \".loadGraphDataFromFile({ shouldClearDatabase: true, graphDataFilePath: './resource/taskSequence.graphData.json' })\"",    
-		"build": "yarn run scriptManager shouldCompileScript=true JSProject/buildSourceCode \".moduleProject({}, {compile:[/**'./test'*/})\"",
-		"bumpVersion": "yarn run scriptManager shouldCompileScript=true JSProject/packageVersion \".bumpVersion({})\"",
+        "build": "yarn run scriptManager shouldCompileScript=true JSProject/buildSourceCode \".moduleProject({}, {compile:[/**'./test'*/]})\"",
+        "bumpVersion": "yarn run scriptManager shouldCompileScript=true JSProject/packageVersion \".bumpVersion({})\"",
+        "deprecated_preinstall": "yarn install --ignore-scripts && (cd ./script && yarn install) # This is a workaround non publishable yarn workspaces. # install workspaces when used as a dependency # NOTES: --ignore-scripts doesn't work because nodegit depends on scripst to be installed correctly. # and using --modules-folder to the same node_modules causes issues. ",        
         "buildAndRelease": "yarn run scriptManager shouldCompileScript=true JSProject/buildAndRelease \".moduleProject({})\"",
         "release": "yarn run scriptManager buildSourceCode \".createGithubBranchedRelease({ tagName: '1.0.13' })\"",
         "updateGithubVersions": "yarn run scriptManager versionGithub \".checkVersion({ shouldUpdatePackage: true })\""
