--- a/javascriptModuleRepository/package.json
+++ b/javascriptModuleRepository/package.json
@@ -20,15 +20,15 @@
         "test": "yarn run scriptManager test \"({ testPath: './test' })\"",
 		"testBreaK": "export NODE_OPTIONS='--inspect-brk' && yarn run scriptManager test \"({ testPath: './test', shouldDebugger: false, shouldCompileTest: true })\"",
         "generateTypes": "tsc --project ./configuration/typescript.config.json",
-		"sleep": "yarn run scriptManager sleep '.setInterval()' ",
-        "exportGraphData": "yarn run scriptManager shouldCompileScript=true graphDatabase/exportGraphData \".exportGraphData({targetPath: './resource',fileName: 'taskSequence.graphData.json'})\"",
-        "loadGraphData": "yarn run scriptManager shouldCompileScript=true graphDatabase/exportGraphData \".loadGraphDataFromFile({ shouldClearDatabase: true, graphDataFilePath: './resource/taskSequence.graphData.json' })\"",    
-        "build": "yarn run scriptManager shouldCompileScript=true JSProject/buildSourceCode \".moduleProject({}, {compile:[/**'./test'*/]})\"",
-        "bumpVersion": "yarn run scriptManager shouldCompileScript=true JSProject/packageVersion \".bumpVersion({})\"",
+        "sleep": "yarn run scriptManager sleep '.setInterval()' ",
+        "bumpVersion": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".packageVersion.bumpVersion({})\"",
         "deprecated_preinstall": "yarn install --ignore-scripts && (cd ./script && yarn install) # This is a workaround non publishable yarn workspaces. # install workspaces when used as a dependency # NOTES: --ignore-scripts doesn't work because nodegit depends on scripst to be installed correctly. # and using --modules-folder to the same node_modules causes issues. ",        
-        "buildAndRelease": "yarn run scriptManager shouldCompileScript=true JSProject/buildAndRelease \".moduleProject({})\"",
-        "release": "yarn run scriptManager buildSourceCode \".createGithubBranchedRelease({ tagName: '1.0.13' })\"",
-        "updateGithubVersions": "yarn run scriptManager versionGithub \".checkVersion({ shouldUpdatePackage: true })\""
+        "exportGraphData": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".graphDataLoading.exportAllGraphData({targetPath: './temporary/resource',fileName: 'graphData.json'})\"",
+        "loadGraphData": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".graphDataLoading.loadGraphDataFromFile({ shouldClearDatabase: true, graphDataFilePath: './resource/graphData.json' })\"",
+        "build": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".buildSourceCode.moduleProject({}, {compile:[/**'./test'*/]})\"",
+        "buildAndRelease": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".buildAndRelease.moduleProject({})\"",
+        "release": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".buildSourceCode.createGithubBranchedRelease({ tagName: '1.0.13' })\"",
+        "updateGithubVersions": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".versionGithub.checkVersion({ shouldUpdatePackage: true })\""
     },
     "flat": false,
     "dependencies": {},
