--- a/javascriptModuleRepository/package.json
+++ b/javascriptModuleRepository/package.json
@@ -16,11 +16,14 @@
     "private": true,
     "scripts": {
         "setup": "yarn install --production=false",
+        "install": "yarn workspaces run install",
+		"upgrade": "yarn workspaces run upgrade",
         "lint": "yarn run eslint --fix --config \"./configuration/eslint.config.js\" \"./\"",
-        "test": "yarn run scriptManager test \"({ testPath: './test' })\"",
-		"testBreaK": "export NODE_OPTIONS='--inspect-brk' && yarn run scriptManager test \"({ testPath: './test', shouldDebugger: false, shouldCompileTest: true })\"",
+        "test": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".test({ testPath: ['./test'] })\"",
+            "test-break": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".test.default({ testPath: ['./test'], shouldDebugger: true, shouldCompileTest: true })\"",
+        "testBreaKScriptManager": "export NODE_OPTIONS='--inspect-brk' && yarn run scriptManager @dependency/deploymentScript \".test({ testPath: ['./test'], shouldDebugger: false, shouldCompileTest: true })\"",
         "generateTypes": "tsc --project ./configuration/typescript.config.json",
-        "sleep": "yarn run scriptManager sleep '.setInterval()' ",
+        "sleep": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript '.sleep.setInterval()' ",
         "bumpVersion": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".packageVersion.bumpVersion({})\"",
         "deprecated_preinstall": "yarn install --ignore-scripts && (cd ./script && yarn install) # This is a workaround non publishable yarn workspaces. # install workspaces when used as a dependency # NOTES: --ignore-scripts doesn't work because nodegit depends on scripst to be installed correctly. # and using --modules-folder to the same node_modules causes issues. ",        
         "exportGraphData": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".graphDataLoading.exportAllGraphData({targetPath: './temporary/resource',fileName: 'graphData.json'})\"",
