📄 Update boilerplate scripts and packges.

--- a/JavascriptWebappRepository/package.json
+++ b/JavascriptWebappRepository/package.json
@@ -1,5 +1,7 @@
 {
   "scripts": {
+    "run": "yarn run scriptManager ./ \".application()\"",
+		"run-pureCommand": "sudo node --eval \"require(process.cwd()).application()\"",
     "build": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".buildSourceCode.moduleProject({}, {compile:[/**'./test'*/]})\"",
     "buildAndRelease": "yarn run scriptManager shouldCompileScript=true @dependency/deploymentScript \".buildAndRelease.moduleProject({})\""
   }
