➕ Boilerplate for react project.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,19 +4,21 @@
     "sideBar.background": "#000000",
     "editor.selectionBackground": "#135564",
     "editor.selectionHighlightBorder": "#135564",
-    "activityBar.background": "#ea789b",
-    "activityBar.activeBorder": "#adee91",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#adee91",
-    "activityBarBadge.foreground": "#15202b",
-    "titleBar.activeBackground": "#ea789b",
-    "titleBar.inactiveBackground": "#ea789b99",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveForeground": "#15202b99",
-    "statusBar.background": "#ea789b",
-    "statusBarItem.hoverBackground": "#e34c7a",
-    "statusBar.foreground": "#15202b"
+    "activityBar.background": "#214153",
+    "activityBar.activeBackground": "#214153",
+    "activityBar.activeBorder": "#b6498f",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#b6498f",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "titleBar.activeBackground": "#214153",
+    "titleBar.inactiveBackground": "#21415399",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "statusBar.background": "#214153",
+    "statusBarItem.hoverBackground": "#305e77",
+    "statusBar.foreground": "#e7e7e7"
   },
-  "peacock.color": "#f1a4bc"
+  "peacock.color": "#f1a4bc",
+  "peacock.remoteColor": "#2f5d78"
 }
