--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -21,18 +21,22 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "mongo": "^0.1.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.12.20"
   },
   "devDependencies": {
-    "@babel/core": "*",
+    "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
-    "babel-loader": "*",
+    "babel-loader": "^8.1.0",
     "core-js": "^3.6.4",
     "nodemon": "^2.0.2",
-    "webpack": "next",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "*"
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
