--- a/MERN-stack/package.json
+++ b/MERN-stack/package.json
@@ -21,8 +21,8 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime-corejs3": "^7.9.2",
+    "@hot-loader/react-dom": "^16.13.0",
     "@material-ui/core": "^4.9.9",
-    "@material-ui/icons": "^4.9.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -34,6 +34,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.20",
