--- a/MERN-stack/package.json
+++ b/MERN-stack/package.json
@@ -23,6 +23,7 @@
     "@babel/runtime-corejs3": "^7.9.2",
     "@hot-loader/react-dom": "^16.13.0",
     "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.9.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
