--- a/MERN-stack/package.json
+++ b/MERN-stack/package.json
@@ -51,6 +51,7 @@
     "babel-loader": "^8.1.0",
     "file-loader": "^6.0.0",
     "nodemon": "^2.0.2",
+    "react-jss": "^10.1.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
